--- a/client/package.json
+++ b/client/package.json
@@ -32,12 +32,13 @@
   },
   "devDependencies": {
     "@babel/core": "7.21.4",
-    "@storybook/addon-actions": "7.0.3",
-    "@storybook/addon-essentials": "7.0.3",
-    "@storybook/addon-interactions": "7.0.3",
-    "@storybook/addon-links": "7.0.3",
-    "@storybook/react": "7.0.3",
-    "@storybook/react-vite": "7.0.3",
+    "@storybook/addon-actions": "7.0.4",
+    "@storybook/addon-essentials": "7.0.4",
+    "@storybook/addon-interactions": "7.0.4",
+    "@storybook/addon-links": "7.0.4",
+    "@storybook/addon-mdx-gfm": "7.0.4",
+    "@storybook/react": "7.0.4",
+    "@storybook/react-vite": "7.0.4",
     "@storybook/testing-library": "0.1.0",
     "@types/amplitude-js": "8.16.2",
     "@types/jest": "29.5.0",
@@ -58,7 +59,7 @@
     "msw": "1.2.1",
     "msw-storybook-addon": "1.8.0",
     "prettier": "2.8.7",
-    "storybook": "7.0.3",
+    "storybook": "7.0.4",
     "ts-jest": "29.1.0",
     "typescript": "5.0.4",
     "ulid": "2.3.0",
