Oppdaterer alert til nytt loggnavn (logd -> log)
Co-authored-by: Ingrid Fosså <ingrid.fossa@nav.no>
Co-authored-by: Nima Jimale <nima.jimale@nav.no>

--- a/.nais/alerts-dev.yaml
+++ b/.nais/alerts-dev.yaml
@@ -24,9 +24,9 @@ spec:
     sla: "Responder innen 1 time i kontortid"
     severity: "danger"
   - alert: "Mye feil i loggene"
-    expr: "(100 * sum by (log_app, log_namespace) (rate(logd_messages_total{log_app=\"\
+    expr: "(100 * sum by (log_app, log_namespace) (rate(log_messages_total{log_app=\"\
       lydia-radgiver-frontend\",log_level=~\"Warning|Error\"}[3m])) / sum by (log_app,\
-      \ log_namespace) (rate(logd_messages_total{log_app=\"lydia-radgiver-frontend\"\
+      \ log_namespace) (rate(log_messages_total{log_app=\"lydia-radgiver-frontend\"\
       }[3m]))) > 10"
     for: "3m"
     action: "Sjekk loggene til app {{ $labels.log_app }} i namespace {{ $labels.log_namespace\
