Legg til permissions
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,6 +3,9 @@ on: [push]
 
 jobs:
   build:
+    permissions:
+      contents: "read"
+      id-token: "write"
     name: Build, lint, test and push docker image
     runs-on: ubuntu-latest
     steps:
