--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "prepare": "cd .. && husky install client/.husky"
   },
   "dependencies": {
+    "@navikt/aksel-icons": "3.4.2",
     "@navikt/ds-css": "3.4.2",
     "@navikt/ds-css-internal": "3.4.2",
     "@navikt/ds-react": "3.4.2",
