--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,9 @@
     "prometheus-api-metrics": "3.2.2",
     "winston": "3.9.0"
   },
+  "overrides": {
+    "semver": "7.5.2"
+  },
   "devDependencies": {
     "@types/express": "4.17.17",
     "@types/express-session": "1.17.7",
