Setter opp chainguard docker image og tester ut i dev.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -71,7 +71,7 @@ jobs:
   deploy-branch-to-dev:
     name: Deploy app to dev
     needs: build
-    if: github.ref == 'refs/heads/node18'
+    if: github.ref == 'refs/heads/chainguard'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
