--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -72,7 +72,7 @@ jobs:
     permissions: {}
     name: Deploy app to dev
     needs: build
-    if: github.ref == 'refs/heads/chainguard'
+    if: github.ref == 'refs/heads/legg-til-snittfilter'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
