Bytt ut zookeeper med Kraft i lokal kjøring
Co-authored-by: Thomas Dufourd <thomas.dufourd@nav.no>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   authserver:
-    image: ghcr.io/navikt/mock-oauth2-server:0.5.7
+    image: ghcr.io/navikt/mock-oauth2-server:2.0.0
     environment:
       TZ: Europe/Oslo
       SERVER_PORT: 6969
@@ -28,46 +28,30 @@ services:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
 
-  zookeeper:
-    container_name: zookeeper
-    image: confluentinc/cp-zookeeper:7.2.2
-    ports:
-      - 2181:2181
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-      ZOOKEEPER_LOG4J_ROOT_LOGLEVEL: ERROR
-    healthcheck:
-      test: nc -z localhost 2181  || exit -1
-      interval: 30s
-      timeout: 10s
-      retries: 5
-    restart: unless-stopped
-
   kafka:
-    image: confluentinc/cp-kafka:7.2.2
-    depends_on:
-      - zookeeper
+    image: confluentinc/cp-kafka:7.4.0
     ports:
-      - 9093:9093
       - 9092:9092
+      - 9093:9093
+      - 9094:9094
     environment:
-      KAFKA_AUTO_LEADER_REBALANCE_ENABLE: false
-      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9093,BROKER://0.0.0.0:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: BROKER:PLAINTEXT,PLAINTEXT:PLAINTEXT
-
-      KAFKA_INTER_BROKER_LISTENER_NAME: BROKER
-      KAFKA_BROKER_ID: 1
+      CLUSTER_ID: 4L6g3nShT-eMCtK--X86sw
+      KAFKA_NODE_ID: 1
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: BROKER:PLAINTEXT,PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      KAFKA_LISTENERS: BROKER://0.0.0.0:9092,PLAINTEXT://0.0.0.0:9093,CONTROLLER://0.0.0.0:9094
+      KAFKA_ADVERTISED_LISTENERS: BROKER://kafka:9092,PLAINTEXT://kafka:9093
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@kafka:9094
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_OFFSETS_TOPIC_NUM_PARTITIONS: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-      #      KAFKA_LOG_FLUSH_INTERVAL_MESSAGES: Long.MAX_VALUE
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9093,BROKER://kafka:9092
       TZ: Europe/Oslo
+    volumes:
+      - ./scripts/setup_kraft.sh:/tmp/setup_kraft.sh
     restart: unless-stopped
+    command: "bash -c '/tmp/setup_kraft.sh && /etc/confluent/docker/run'"
 
   backend:
     image: ghcr.io/navikt/lydia-api:latest
