--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.15.0",
     "react-select": "5.7.4",
+    "recharts": "2.8.0",
     "styled-components": "6.0.7",
     "swr": "2.2.2",
     "zod": "3.22.2"
