Fjernar fnuttar i yaml-filer slik at det vert likare på tvers av repo
Co-authored-by: Christian Klem <christian.klem@nav.no>
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>

--- a/.github/workflows/deploy-redis.yaml
+++ b/.github/workflows/deploy-redis.yaml
@@ -5,8 +5,8 @@ on:
         branches:
             - main
         paths:
-            - ".nais/redis.yaml" # Deploy Redis når nais-config endrer seg,
-            - ".github/workflows/deploy-redis.yaml" # og når denne workflowen endrer seg
+            - .nais/redis.yaml # Deploy Redis når nais-config endrer seg,
+            - .github/workflows/deploy-redis.yaml # og når denne workflowen endrer seg
 
 permissions: {}
 
