Ikke kjør trivy når det er dependabot som initierer action
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>
Co-authored-by: Ingrid Fosså <ingrid.fossa@nav.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -87,6 +87,7 @@ jobs:
           VAR: image=${{ needs.build.outputs.image }}
 
   trivy-scan:
+    if: ${{ github.actor != 'dependabot[bot]' }}
     name: Scanner docker image med Trivy
     runs-on: ubuntu-latest
     needs: build
