Vis lenke til virksomhet i salesforce
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>
Co-authored-by: Ingrid Fosså <ingrid.fossa@nav.no>
Co-authored-by: Morten Svankild <morten.svankild@nav.no>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -137,6 +137,7 @@ services:
       SALESFORCE_CLIENT_SECRET: clientSecret
       SALESFORCE_USERNAME: username
       SALESFORCE_PASSWORD: password
+      SALESFORCE_SECURITY_TOKEN: securityToken
     restart: unless-stopped
 
   redis:
