--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -121,6 +121,7 @@ services:
       STATISTIKK_NARINGSKODE_TOPIC: arbeidsgiver.sykefravarsstatistikk-naringskode-v1
       STATISTIKK_VIRKSOMHET_TOPIC: arbeidsgiver.sykefravarsstatistikk-virksomhet-v1
       STATISTIKK_VIRKSOMHET_GRADERING_TOPIC: arbeidsgiver.sykefravarsstatistikk-virksomhet-gradert-v1
+      JOBBLYTTER_TOPIC: pia.jobblytter-v1
       # Ubrukte topics?
       STATISTIKK_TOPIC: arbeidsgiver.sykefravarsstatistikk-v1
       IA_SAK_HENDELSE_TOPIC: pia.ia-sak-hendelse-v1
