--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-storybook": "0.6.15",
     "husky": "8.0.3",
     "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "msw": "1.3.2",
     "msw-storybook-addon": "1.8.0",
     "prettier": "3.0.3",
