WIP: gjør ting feil!
Co-authored-by: Ingrid Fosså <ingrid.fossa@nav.no>
Co-authored-by: Thomas Dufourd <thomas.dufourd@nav.no>
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,7 +56,7 @@ services:
     command: "bash -c '/tmp/setup_kraft.sh && /etc/confluent/docker/run'"
 
   backend:
-    image: europe-north1-docker.pkg.dev/nais-management-233d/pia/lydia-api:latest
+    image: skru-av-moduler
 
     # -- kan slettes når vi bygger image for moderne maccer også
     platform: linux/amd64
