--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -25,7 +25,7 @@ spec:
       cpu: 100m
   prometheus:
     enabled: true
-    path: "/metrics"
+    path: "/internal/metrics"
   accessPolicy:
     outbound:
       rules:
