--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@navikt/ds-react": "5.10.4",
     "amplitude-js": "8.21.9",
     "react": "18.2.0",
+    "react-confetti-explosion": "2.1.2",
     "react-dom": "18.2.0",
     "react-router-dom": "6.18.0",
     "react-select": "5.8.0",
