Oppgraderte amplitute-js til @amplitude/analytics-browser

--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "@navikt/aksel-icons": "5.11.4",
     "@navikt/ds-css": "5.11.4",
     "@navikt/ds-react": "5.11.4",
-    "amplitude-js": "8.21.9",
+    "@amplitude/analytics-browser": "2.3.8",
     "react": "18.2.0",
     "react-confetti-explosion": "2.1.2",
     "react-dom": "18.2.0",
@@ -38,7 +38,6 @@
     "@storybook/react": "7.6.4",
     "@storybook/react-vite": "7.6.4",
     "@storybook/testing-library": "0.2.2",
-    "@types/amplitude-js": "8.16.5",
     "@types/jest": "29.5.11",
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
