--- a/client/package.json
+++ b/client/package.json
@@ -15,37 +15,38 @@
     "skuffende": "say sku fen de, komma"
   },
   "dependencies": {
-    "@navikt/aksel-icons": "5.12.2",
-    "@navikt/ds-css": "5.12.2",
-    "@navikt/ds-react": "5.12.2",
-    "@amplitude/analytics-browser": "2.3.8",
+    "@navikt/aksel-icons": "5.11.4",
+    "@navikt/ds-css": "5.11.4",
+    "@navikt/ds-react": "5.11.4",
+    "amplitude-js": "8.21.9",
     "react": "18.2.0",
     "react-confetti-explosion": "2.1.2",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.21.1",
+    "react-router-dom": "6.20.1",
     "react-select": "5.8.0",
     "recharts": "2.10.3",
-    "styled-components": "6.1.6",
+    "styled-components": "6.1.1",
     "swr": "2.2.4",
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@babel/core": "7.23.7",
-    "@storybook/addon-actions": "7.6.7",
-    "@storybook/addon-essentials": "7.6.7",
-    "@storybook/addon-interactions": "7.6.7",
-    "@storybook/addon-links": "7.6.7",
-    "@storybook/react": "7.6.7",
-    "@storybook/react-vite": "7.6.7",
+    "@babel/core": "7.23.6",
+    "@storybook/addon-actions": "7.6.4",
+    "@storybook/addon-essentials": "7.6.4",
+    "@storybook/addon-interactions": "7.6.4",
+    "@storybook/addon-links": "7.6.4",
+    "@storybook/react": "7.6.4",
+    "@storybook/react-vite": "7.6.4",
     "@storybook/testing-library": "0.2.2",
+    "@types/amplitude-js": "8.16.5",
     "@types/jest": "29.5.11",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "6.17.0",
-    "@typescript-eslint/parser": "6.17.0",
+    "@types/react": "18.2.43",
+    "@types/react-dom": "18.2.17",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "@vitejs/plugin-react": "4.2.1",
     "babel-loader": "9.1.3",
-    "eslint": "8.56.0",
+    "eslint": "8.55.0",
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-storybook": "0.6.15",
@@ -55,14 +56,15 @@
     "msw": "1.3.2",
     "msw-storybook-addon": "1.10.0",
     "prettier": "3.1.1",
-    "storybook": "7.6.7",
+    "storybook": "7.6.4",
     "ts-jest": "29.1.1",
     "typescript": "5.2.2",
     "ulid": "2.3.0",
-    "vite": "5.0.10"
+    "vite": "4.5.1"
   },
   "overrides": {
     "glob-parent": "6.0.2",
+    "loader-utils": "1.4.2",
     "semver": "7.5.2"
   },
   "msw": {
