--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "express-session": "1.17.3",
+    "follow-redirects": "1.15.4",
     "helmet": "7.1.0",
     "http-proxy-middleware": "2.0.6",
     "ioredis": "5.3.2",
