--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,7 +73,7 @@ jobs:
     permissions: {}
     name: Deploy app to dev
     needs: build
-    if: github.ref == 'refs/heads/pakkeoppgradering'
+    if: github.ref == 'refs/heads/aiven-redis'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
