Oppdater redis instansnavn
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>
Co-authored-by: Nima Jimale <nima.jimale@nav.no>

--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -31,7 +31,7 @@ spec:
       rules:
         - application: lydia-api
   redis:
-    - instance: fia_sessions
+    - instance: fiasessions
       access: readwrite
   azure:
     application:
