Oppdater actions/deploy til v2 og benytt nøkkelfri deploy

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,7 +49,8 @@ jobs:
       image: ${{ steps.docker-push.outputs.image }}
 
   deploy:
-    permissions: {}
+    permissions:
+      id-token: write
     strategy:
       matrix:
         cluster: [dev, prod]
@@ -60,9 +61,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Deploy to ${{ matrix.cluster }}
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: ${{ matrix.cluster }}-gcp
           RESOURCE: .nais/nais.yaml
           VARS: .nais/${{ matrix.cluster }}.yaml
@@ -70,7 +70,8 @@ jobs:
 
 
   deploy-branch-to-dev:
-    permissions: {}
+    permissions:
+      id-token: write
     name: Deploy app to dev
     needs: build
     if: github.ref == 'refs/heads/aiven-redis'
@@ -78,9 +79,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Deploy to dev
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
           RESOURCE: .nais/nais.yaml
           VARS: .nais/dev.yaml
