Legg til topic navn som manglet i konfig (for å kunne kjøre lokalt)
Co-authored-by: Sindre Larsen <sindre.larsen@nav.no>
Co-authored-by: Per-Christian Nielsen <per-christian.nielsen@nav.no>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,6 +111,7 @@ services:
       IA_SAK_STATISTIKK_TOPIC: pia.ia-sak-statistikk-v1
       IA_SAK_STATUS_TOPIC: pia.ia-sak-status-v1
       IA_SAK_LEVERANSE_TOPIC: pia.ia-sak-leveranse-v1
+      IA_SAK_KARTLEGGING_TOPIC: pia.kartlegging-v1
       BRREG_OPPDATERING_TOPIC: pia.brreg-oppdatering
       BRREG_ALLE_VIRKSOMHETER_TOPIC: pia.brreg-alle-virksomheter
       STATISTIKK_METADATA_VIRKSOMHET_TOPIC: arbeidsgiver.sykefravarsstatistikk-metadata-virksomhet-v1
