--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -112,6 +112,8 @@ services:
       IA_SAK_STATUS_TOPIC: pia.ia-sak-status-v1
       IA_SAK_LEVERANSE_TOPIC: pia.ia-sak-leveranse-v1
       IA_SAK_KARTLEGGING_TOPIC: pia.kartlegging-v1
+      SPORREUNDERSOKELSE_SVAR_TOPIC: pia.sporreundersokelse-svar-v1
+      SPORREUNDERSOKELSE_TOPIC: pia.sporreundersokelse-v1
       BRREG_OPPDATERING_TOPIC: pia.brreg-oppdatering
       BRREG_ALLE_VIRKSOMHETER_TOPIC: pia.brreg-alle-virksomheter
       STATISTIKK_METADATA_VIRKSOMHET_TOPIC: arbeidsgiver.sykefravarsstatistikk-metadata-virksomhet-v1
