--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,10 @@
     "skuffende": "say sku fen de, komma"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "2.3.8",
     "@navikt/aksel-icons": "5.12.4",
     "@navikt/ds-css": "5.12.4",
     "@navikt/ds-react": "5.12.4",
-    "@amplitude/analytics-browser": "2.3.8",
     "react": "18.2.0",
     "react-confetti-explosion": "2.1.2",
     "react-dom": "18.2.0",
@@ -52,8 +52,8 @@
     "husky": "8.0.3",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "msw": "1.3.2",
-    "msw-storybook-addon": "1.10.0",
+    "msw": "2.1.5",
+    "msw-storybook-addon": "2.0.0-beta.1",
     "prettier": "3.1.1",
     "storybook": "7.6.7",
     "ts-jest": "29.1.1",
