--- a/client/package.json
+++ b/client/package.json
@@ -31,12 +31,12 @@
   },
   "devDependencies": {
     "@babel/core": "7.23.7",
-    "@storybook/addon-actions": "7.6.7",
-    "@storybook/addon-essentials": "7.6.7",
-    "@storybook/addon-interactions": "7.6.7",
-    "@storybook/addon-links": "7.6.7",
-    "@storybook/react": "7.6.7",
-    "@storybook/react-vite": "7.6.7",
+    "@storybook/addon-actions": "^7.6.10",
+    "@storybook/addon-essentials": "^7.6.10",
+    "@storybook/addon-interactions": "^7.6.10",
+    "@storybook/addon-links": "^7.6.10",
+    "@storybook/react": "^7.6.10",
+    "@storybook/react-vite": "^7.6.10",
     "@storybook/testing-library": "0.2.2",
     "@types/jest": "29.5.11",
     "@types/react": "18.2.46",
@@ -55,7 +55,7 @@
     "msw": "2.1.5",
     "msw-storybook-addon": "2.0.0-beta.1",
     "prettier": "3.1.1",
-    "storybook": "7.6.7",
+    "storybook": "^7.6.10",
     "ts-jest": "29.1.1",
     "typescript": "5.2.2",
     "ulid": "2.3.0",
