--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -56,6 +56,8 @@ spec:
       value: {{fiaSaksbehandlerGroup}}
     - name: FIA_LESETILGANG_GROUP_ID
       value: {{fiaLesetilgangGroup}}
+    - name: VITE_KARTLEGGING_URL
+      value: {{kartleggingUrl}}
   envFrom:
     - secret: fia-redis
     - secret: fia-frackend
