--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,7 +74,7 @@ jobs:
       id-token: write
     name: Deploy app to dev
     needs: build
-    if: github.ref == 'refs/heads/aiven-redis'
+    if: github.ref == 'refs/heads/behovsvurderinger_i_status_vi_bistaar'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
