--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "@navikt/aksel-icons": "5.18.1",
     "@navikt/ds-css": "5.18.1",
     "@navikt/ds-react": "5.18.1",
+    "highcharts": "11.4.3",
+    "highcharts-react-official": "3.2.1",
     "react": "18.2.0",
     "react-confetti-explosion": "2.1.2",
     "react-dom": "18.2.0",
