--- a/client/package.json
+++ b/client/package.json
@@ -15,53 +15,53 @@
     "skuffende": "say sku fen de, komma"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "2.6.1",
-    "@navikt/aksel-icons": "5.18.1",
-    "@navikt/ds-css": "5.18.1",
-    "@navikt/ds-react": "5.18.1",
+    "@amplitude/analytics-browser": "2.9.0",
+    "@navikt/aksel-icons": "5.18.3",
+    "@navikt/ds-css": "5.18.3",
+    "@navikt/ds-react": "5.18.3",
     "highcharts": "11.4.3",
     "highcharts-react-official": "3.2.1",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-confetti-explosion": "2.1.2",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.22.3",
+    "react-dom": "18.3.1",
+    "react-router-dom": "6.23.1",
     "react-select": "5.8.0",
-    "recharts": "2.12.4",
-    "styled-components": "6.1.8",
+    "recharts": "2.12.7",
+    "styled-components": "6.1.11",
     "swr": "2.2.5",
-    "zod": "3.22.4"
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@babel/core": "7.24.4",
-    "@storybook/addon-actions": "^8.1.3",
-    "@storybook/addon-essentials": "^8.1.3",
-    "@storybook/addon-interactions": "^8.1.3",
-    "@storybook/addon-links": "^8.1.3",
-    "@storybook/react": "^8.1.3",
-    "@storybook/react-vite": "^8.1.3",
+    "@babel/core": "7.24.7",
+    "@storybook/addon-actions": "^8.1.10",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/react": "^8.1.10",
+    "@storybook/react-vite": "^8.1.10",
     "@storybook/testing-library": "0.2.2",
     "@types/jest": "29.5.12",
-    "@types/react": "18.2.75",
-    "@types/react-dom": "18.2.24",
-    "@typescript-eslint/eslint-plugin": "7.6.0",
-    "@typescript-eslint/parser": "7.6.0",
-    "@vitejs/plugin-react": "4.2.1",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.13.1",
+    "@typescript-eslint/parser": "7.13.1",
+    "@vitejs/plugin-react": "4.3.1",
     "babel-loader": "9.1.3",
-    "eslint": "8.56.0",
-    "eslint-plugin-jsx-a11y": "6.8.0",
-    "eslint-plugin-react": "7.34.1",
+    "eslint": "8.57.0",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-react": "7.34.3",
     "eslint-plugin-storybook": "0.8.0",
     "husky": "9.0.11",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "msw": "2.2.13",
-    "msw-storybook-addon": "2.0.0-beta.1",
-    "prettier": "3.2.5",
-    "storybook": "^8.1.3",
-    "ts-jest": "29.1.2",
-    "typescript": "5.4.4",
+    "msw": "2.3.1",
+    "msw-storybook-addon": "2.0.2",
+    "prettier": "3.3.2",
+    "storybook": "^8.1.10",
+    "ts-jest": "29.1.5",
+    "typescript": "5.5.2",
     "ulid": "2.3.0",
-    "vite": "5.2.8"
+    "vite": "5.3.1"
   },
   "overrides": {
     "glob-parent": "6.0.2",
