Fiks: regex til path i scriptet som oppretter Ingress rules til redirect fra fia.intern|ekstern til fia.ansatt i cluster dev-gcp
Co-authored-by: Nima Jimale <nima.jimale@nav.no>
Co-authored-by: Christian Klem <christian.klem@nav.no>

--- a/.nais/dev-redirect-fra-intern-til-ansatt.yaml
+++ b/.nais/dev-redirect-fra-intern-til-ansatt.yaml
@@ -21,5 +21,15 @@ spec:
                 name: lydia-radgiver-frontend
                 port:
                   number: 80
-            path: /lydia-radgiver-frontend(/|$)(.*)
+            path: (/|$)(.*)
+            pathType: ImplementationSpecific
+    - host: fia.ekstern.dev.nav.no
+      http:
+        paths:
+          - backend:
+              service:
+                name: lydia-radgiver-frontend
+                port:
+                  number: 80
+            path: (/|$)(.*)
             pathType: ImplementationSpecific
