Ny fiks: regex til path skal være absolutt path i scriptet som oppretter Ingress rules til redirect fra fia.intern|ekstern til fia.ansatt i cluster dev-gcp
Co-authored-by: Nima Jimale <nima.jimale@nav.no>
Co-authored-by: Christian Klem <christian.klem@nav.no>

--- a/.nais/dev-redirect-fra-intern-til-ansatt.yaml
+++ b/.nais/dev-redirect-fra-intern-til-ansatt.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: "https://fia.ansatt.dev.nav.no/$2"
+    nginx.ingress.kubernetes.io/rewrite-target: "https://fia.ansatt.dev.nav.no/$1"
     prometheus.io/scrape: "false"
   labels:
     app: lydia-radgiver-frontend
@@ -21,7 +21,7 @@ spec:
                 name: lydia-radgiver-frontend
                 port:
                   number: 80
-            path: (/|$)(.*)
+            path: /(.*)
             pathType: ImplementationSpecific
     - host: fia.ekstern.dev.nav.no
       http:
@@ -31,5 +31,5 @@ spec:
                 name: lydia-radgiver-frontend
                 port:
                   number: 80
-            path: (/|$)(.*)
+            path: /(.*)
             pathType: ImplementationSpecific
