Lage to scripts til både ekstern og intern redirect til ansatt i dev-gcp
Co-authored-by: Nima Jimale <nima.jimale@nav.no>
Co-authored-by: Christian Klem <christian.klem@nav.no>

--- a/.github/workflows/deploy-redirect-dev.yaml
+++ b/.github/workflows/deploy-redirect-dev.yaml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - ".github/workflows/deploy-redirect-dev.yaml"
+      - ".nais/dev-redirect-fra-ekstern-til-ansatt.yaml"
       - ".nais/dev-redirect-fra-intern-til-ansatt.yaml"
 
 permissions:
@@ -19,4 +20,6 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
-          RESOURCE: .nais/dev-redirect-fra-intern-til-ansatt.yaml
+          RESOURCE: "\
+          .nais/dev-redirect-fra-intern-til-ansatt.yaml,\
+          .nais/dev-redirect-fra-ekstern-til-ansatt.yaml"
