Angi riktig ingressClassName for p få redirect fra ekstern ingress til å fungere

--- a/.nais/dev-redirect-fra-ekstern-til-ansatt.yaml
+++ b/.nais/dev-redirect-fra-ekstern-til-ansatt.yaml
@@ -11,7 +11,7 @@ metadata:
   name: dev-redirect-fia-ekstern-til-ansatt
   namespace: pia
 spec:
-  ingressClassName: nais-ingress
+  ingressClassName: nais-ingress-external
   rules:
     - host: fia.ekstern.dev.nav.no
       http:
