--- a/client/package.json
+++ b/client/package.json
@@ -12,56 +12,57 @@
     "lint": "eslint src/",
     "storybook": "storybook dev -p 6006 --disable-telemetry",
     "prepare": "cd .. && husky client/.husky",
-    "skuffende": "say sku fen de, komma"
+    "skuffende": "say sku fen de, komma",
+    "tsc": "tsc"
   },
   "dependencies": {
-    "@amplitude/analytics-browser": "2.9.3",
+    "@amplitude/analytics-browser": "2.10.0",
     "@navikt/aksel-icons": "6.13.0",
     "@navikt/ds-css": "6.13.0",
     "@navikt/ds-react": "6.13.0",
-    "highcharts": "11.4.3",
+    "highcharts": "11.4.6",
     "highcharts-react-official": "3.2.1",
     "react": "18.3.1",
     "react-confetti-explosion": "2.1.2",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.24.0",
+    "react-router-dom": "6.26.0",
     "react-select": "5.8.0",
     "recharts": "2.12.7",
-    "styled-components": "6.1.11",
+    "styled-components": "6.1.12",
     "swr": "2.2.5",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@babel/core": "7.24.7",
-    "@storybook/addon-actions": "^8.1.11",
-    "@storybook/addon-essentials": "^8.1.11",
-    "@storybook/addon-interactions": "^8.1.11",
-    "@storybook/addon-links": "^8.1.11",
-    "@storybook/react": "^8.1.11",
-    "@storybook/react-vite": "^8.1.11",
+    "@babel/core": "7.25.2",
+    "@storybook/addon-actions": "^8.2.7",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/react": "^8.2.7",
+    "@storybook/react-vite": "^8.2.7",
     "@storybook/testing-library": "0.2.2",
     "@types/jest": "29.5.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
     "@vitejs/plugin-react": "4.3.1",
     "babel-loader": "9.1.3",
     "eslint": "8.57.0",
     "eslint-plugin-jsx-a11y": "6.9.0",
-    "eslint-plugin-react": "7.34.3",
+    "eslint-plugin-react": "7.35.0",
     "eslint-plugin-storybook": "0.8.0",
-    "husky": "9.0.11",
+    "husky": "9.1.4",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "msw": "2.3.1",
-    "msw-storybook-addon": "2.0.2",
-    "prettier": "3.3.2",
-    "storybook": "^8.1.11",
-    "ts-jest": "29.1.5",
-    "typescript": "5.5.3",
+    "msw": "2.3.5",
+    "msw-storybook-addon": "2.0.3",
+    "prettier": "3.3.3",
+    "storybook": "^8.2.7",
+    "ts-jest": "29.2.4",
+    "typescript": "5.5.4",
     "ulid": "2.3.0",
-    "vite": "5.3.2"
+    "vite": "5.3.5"
   },
   "overrides": {
     "glob-parent": "6.0.2",
