--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.0",
     "react-select": "5.8.0",
+    "react-to-pdf": "1.0.1",
     "recharts": "2.12.7",
     "styled-components": "6.1.12",
     "swr": "2.2.5",
