deployer midlertidig ikke til dev
Co-authored-by: Christian Klem <christian.klem@nav.no>
Co-authored-by: Thomas Dufourd <thomas.dufourd@nav.no>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,7 +53,7 @@ jobs:
       id-token: write
     strategy:
       matrix:
-        cluster: [dev, prod]
+        cluster: [prod]
     name: Deploy app to ${{ matrix.cluster }}
     needs: build
     if: github.ref == 'refs/heads/main'
