--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -3,7 +3,8 @@ ingresses:
 - "https://fia.ekstern.dev.nav.no"
 - "https://fia.ansatt.dev.nav.no"
 - "https://demo-fia.ansatt.dev.nav.no"
-fiaSuperbrukerGroup: 02b25498-1a81-45b5-84cb-876a8899c809
 kartleggingUrl: "https://fia-arbeidsgiver.ekstern.dev.nav.no"
+fiaSuperbrukerGroup: 02b25498-1a81-45b5-84cb-876a8899c809
 fiaSaksbehandlerGroup: e00f4248-2d26-4645-bf94-22d47623a51e
 fiaLesetilgangGroup: 30f17df5-c36c-4ad7-b862-48f56c95ebb2
+teamPiaGroup: 30f17df5-c36c-4ad7-b862-48f56c95ebb2
