--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -42,6 +42,7 @@ spec:
           - id: {{fiaSuperbrukerGroup}}
           - id: {{fiaSaksbehandlerGroup}}
           - id: {{fiaLesetilgangGroup}}
+          - id: {{teamPiaGroup}}
         extra:
           - "NAVident"
     sidecar:
@@ -56,6 +57,8 @@ spec:
       value: {{fiaSaksbehandlerGroup}}
     - name: FIA_LESETILGANG_GROUP_ID
       value: {{fiaLesetilgangGroup}}
+    - name: TEAM_PIA_GROUP_ID
+      value: {{teamPiaGroup}}
     - name: VITE_KARTLEGGING_URL
       value: {{kartleggingUrl}}
   envFrom:
